# Inbanglist

./: .gitignore  CODEOWNERS  README.md  blabla.md  cloud_computer_server.md  docker-compose-deploy.yml  docker-compose.yml  dockerwithDB&Django_or_dockerOnlyDjango&cloudRDBMS.md  mypy.ini  project_plan.md  pyproject.toml  what_is_kafka.md  whyCDN.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  ec2-deploy.yml  frontend-deploy.yml
api/: Dockerfile  requirements.dev.txt  requirements.txt
api/app/afreecatv/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
api/app/chzzk/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
api/app/common/: admin.py  models.py  permissions.py  platforms.py  serializers.py  tasks.py  views.py
api/app/config/: celery.py  middleware.py  settings.py  settings_ci.py  urls.py
api/app/s3/: S3Instance.py  apps.py  serializers.py  urls.py  views.py
api/app/static/: favicon.ico:Zone.Identifier
api/app/users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
api/app/youtube/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  (+1 more)
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
scrap_test/: chzzk.py  youtube.py
scraper/: Dockerfile  crontab  requirements.txt
scraper/app/: convert_int.py  main.py  playwright_crawling.py  selenium_crawling.py
scraper/scrap_test/: afreecatv.py  chzzk.py
(+73 files in other folders)
